# PSS-t4

./: CMakeLists.txt
T4/: Makefile  cliente.c  fun.c  integral.h  parte-a.c  parte-b.c  serv.c  test-parte-a.c  test-parte-b.c  util.c
T4/t4/: cliente.c  parte-a.c  parte-b.c  serv.c
